--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+The purpose of this fork is to expand on the OTP generator and allow for multiple tokens; at least two, as they don't require that much memory.
+
+
+
+ --README FROM YOHANES (at time of fork)--
+
 For the first, my goal is to make the code small, and modular, to fit more modules into the Chronos.
 
 Changes, merges, project status
